# dotfiles

./: .bash_aliases  .gvimrc  .ncmpcpp  .ripit  .vim  .vimrc  README  README.md  README~  Xresources  addtolibrary.sh  backup_all.sh  backup_home.sh  backup_script.sh  bash_aliases  bash_functions  bashrc  cursor_freeze_solution.sh  git_aliases.sh  go_sleep.sh  gvimrc  ideavimrc  rss.sh  shortcuts.sh  terminalrc  test_domain.sh  thunderbird_userContent.css  tmux.conf  tmux.left.conf  vim_plugins  vim_plugins.sh  vimrc  xmodmaps.sh
.config/: awesome  deadbeef
awesome/: c.conf  dual_rc.lua  konky.conf  np.sh  old_rc.lua  rc.lua  statuscheck.sh  theme.lua
awesome/themes/: laite2.lua  laite_light.lua
exercises/C++ Primer/: helpers.cpp~  helpers.h  helpers.h~
exercises/WPD/: 19.html  20.html  25.html  index.html  index.html~  pizza.js
exercises/algoritmit_ja_tietorakenteet/: a.out  dump.txt  harkka.cpp  harkka.h
exercises/gstreamer/ep/src/: CMakeLists.txt  backend.cpp  backend.h  config.cpp  config.h  engine.cpp  engine.h  global.cpp  global.h  library.cpp  library.h  main.cpp  playback.cpp  playback.h  playlist.cpp  playlist.h  song.cpp  song.h  widget.cpp  widget.h  window.cpp  window.h
exercises/maaseutu/: lisays.php  lomake.php  (+3 more)
exercises/timetracker/: CMakeLists.txt  README  config.cpp  config.h  data.cpp  data.h  dialogs.cpp  dialogs.h  helpers.cpp  helpers.h  log.cpp  log.h  main.cpp  todo  treedata.cpp  treedata.h  window.cpp  window.h
exercises/timetracker/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
exercises/timetracker/build_debug/src/: Makefile  cmake_install.cmake  example
exercises/timetracker/src/: config.cpp  config.h  data.cpp  data.h  dialogs.cpp  dialogs.h  helpers.cpp  helpers.h  log.cpp  log.h  main.cpp  treedata.cpp  treedata.h  window.cpp  window.h
playlists/: 2012B.m3u  2012kk09.m3u  2012kk09.m3u~  2012kk10.m3u  2012kk10.m3u~  2012vk38.m3u~  2012vk39.m3u~  2012vk40.m3u~  2012vk42.m3u~  2012vk43.m3u  2012vk44.m3u
vim/: manpageview.vba  php_doc  vim_plugins.sh  yankring_history_v2.txt
(+1289 files in other folders)
